--- a/userService/src/main/resources/application.yml
+++ b/userService/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-   name: user-service
+   name: USER-SERVICE
   datasource:
     url: "jdbc:mysql://localhost:3306/microservices"
     username: springstudent
@@ -22,4 +22,4 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8762/eureka
