--- a/ApiGateWay/pom.xml
+++ b/ApiGateWay/pom.xml
@@ -52,6 +52,11 @@
         <scope>test</scope>
     </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
 	</dependencies>
 
 
