--- a/ApiGateWay/src/main/resources/application.yml
+++ b/ApiGateWay/src/main/resources/application.yml
@@ -25,14 +25,17 @@ spring:
               predicates:
                 - Path=/ratings/**
 
-eureka:
-  client:
-    register-with-eureka: true
-    initial-instance-info-replication-interval-seconds: 5
-    registry-fetch-interval-seconds: 5
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8762/eureka
+  config:
+    import: optional:configserver:http://localhost/8085
+
+#eureka:
+#  client:
+#    register-with-eureka: true
+#    initial-instance-info-replication-interval-seconds: 5
+#    registry-fetch-interval-seconds: 5
+#    fetch-registry: true
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
 
 logging:
   level:
