--- a/userService/src/main/resources/application.yml
+++ b/userService/src/main/resources/application.yml
@@ -1,11 +1,18 @@
 server:
   port: 8089
 
+
 spring:
   application:
-   name: USER-SERVICE
+    name: USER-SERVICE
+
+  config:
+    import: optional:configserver:http://localhost:8085
+#  profiles:
+#    active: dev
+
   datasource:
-    url: "jdbc:mysql://localhost:3306/microservices"
+    url: jdbc:mysql://localhost:3306/microservices
     username: springstudent
     password: student123
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -15,11 +22,15 @@ spring:
       ddl-auto: update
     show-sql: true
 
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8762/eureka
+
+
+
+
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#    service-url:
+#      defaultZone: http://localhost:8762/eureka
