--- a/ConfigServer/src/main/resources/application.yml
+++ b/ConfigServer/src/main/resources/application.yml
@@ -6,20 +6,20 @@ server:
 spring:
   application:
     name: CONFIG-SERVER
-
   cloud:
     config:
       server:
         git:
           uri: https://github.com/deepakkroxford/Microservice-Configuration
           clone-on-start: true
+  config:
+   import: optional:configserver:http://localhost:8085
 
-
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
